Update URL and README

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-﻿Please see http://ouno.tk/py-ass2srt/
+﻿It's my first python program. There are so many problems and poor implementations.
+I may rewrite it in futher. Anyway, it's valid in most cases.
